namespace TodoItems.Core.DueDateSettingStrategy
{
    public enum DueDateSettingOption
    {
        SelectFirstAvailableDay,
        SelectFewestTodoItemsDay
    }
}
